metadata/force-app/main/default/objects/CustomName_bjeZL__c/CustomName_bjeZL__c.object-meta.xml
<CustomObject>
    <description>Description_CTmst</description>
    <label>CustomLabel_mngAW</label>
    <nameField>
        <label>CustomLabel_mngAW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_mngAWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>