metadata/force-app/main/default/objects/CustomName_bjeZL__c/fields/CustomField_aPZzi__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aPZzi__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYNAge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>