metadata/force-app/main/default/objects/CustomName_bjeZL__c/fields/CustomField_DaBum__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DaBum__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldDVanp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>